--- a/Course_2_Intermediate Python for Data Science/CH3_Pandas.ipynb
+++ b/Course_2_Intermediate Python for Data Science/CH3_Pandas.ipynb
@@ -14,7 +14,7 @@
    },
    "source": [
     "<h1>Table of Contents<span class=\"tocSkip\"></span></h1>\n",
-    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Datasets-in-Python\" data-toc-modified-id=\"Datasets-in-Python-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Datasets in Python</a></span><ul class=\"toc-item\"><li><span><a href=\"#Dictionary-to-DataFrame\" data-toc-modified-id=\"Dictionary-to-DataFrame-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Dictionary to DataFrame</a></span></li><li><span><a href=\"#CSV-to-DataFrame\" data-toc-modified-id=\"CSV-to-DataFrame-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>CSV to DataFrame</a></span></li></ul></li><li><span><a href=\"#Index-and-Select-Data\" data-toc-modified-id=\"Index-and-Select-Data-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Index and Select Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Square-Square-barckets-[-]\" data-toc-modified-id=\"Square-Square-barckets-[-]-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Square Square barckets [ ]</a></span></li><li><span><a href=\"#loc\" data-toc-modified-id=\"loc-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>loc</a></span></li><li><span><a href=\"#iloc\" data-toc-modified-id=\"iloc-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>iloc</a></span></li></ul></li></ul></div>"
+    "<div class=\"toc\"><ul class=\"toc-item\"><li><span><a href=\"#Datasets-in-Python\" data-toc-modified-id=\"Datasets-in-Python-1\"><span class=\"toc-item-num\">1&nbsp;&nbsp;</span>Datasets in Python</a></span><ul class=\"toc-item\"><li><span><a href=\"#Dictionary-to-DataFrame\" data-toc-modified-id=\"Dictionary-to-DataFrame-1.1\"><span class=\"toc-item-num\">1.1&nbsp;&nbsp;</span>Dictionary to DataFrame</a></span></li><li><span><a href=\"#CSV-to-DataFrame\" data-toc-modified-id=\"CSV-to-DataFrame-1.2\"><span class=\"toc-item-num\">1.2&nbsp;&nbsp;</span>CSV to DataFrame</a></span></li></ul></li><li><span><a href=\"#Index-and-Select-Data\" data-toc-modified-id=\"Index-and-Select-Data-2\"><span class=\"toc-item-num\">2&nbsp;&nbsp;</span>Index and Select Data</a></span><ul class=\"toc-item\"><li><span><a href=\"#Square-Square-barckets-[-]\" data-toc-modified-id=\"Square-Square-barckets-[-]-2.1\"><span class=\"toc-item-num\">2.1&nbsp;&nbsp;</span>Square Square barckets [ ]</a></span></li><li><span><a href=\"#loc\" data-toc-modified-id=\"loc-2.2\"><span class=\"toc-item-num\">2.2&nbsp;&nbsp;</span>loc</a></span></li><li><span><a href=\"#iloc\" data-toc-modified-id=\"iloc-2.3\"><span class=\"toc-item-num\">2.3&nbsp;&nbsp;</span>iloc</a></span></li><li><span><a href=\"#index號碼、index名稱-查詢\" data-toc-modified-id=\"index號碼、index名稱-查詢-2.4\"><span class=\"toc-item-num\">2.4&nbsp;&nbsp;</span>index號碼、index名稱 查詢</a></span></li></ul></li></ul></div>"
    ]
   },
   {
@@ -34,7 +34,6 @@
     "    1. high level data manipulation tool\n",
     "    2. Built on Numpy\n",
     "    3. DataFrame\n",
-    "        ![DataFrame]()\n",
     "        1. from dictionary\n",
     "        2. from .csv file (comma-sparated-values)"
    ]
@@ -143,7 +142,8 @@
     "2. Advanced methods\n",
     "    1. loc\n",
     "    2. iloc  \n",
-    "\n",
+    "3. index名稱、index號碼 查詢\n",
+    "        \n",
     "\n",
     "存取資料時，取得資料的type\n",
     "+ series [ ]\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 48,
    "metadata": {
     "hidden": true
    },
@@ -195,6 +195,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "           country  drives_right  cars_per_cap\n",
+      "US   United States          True           809\n",
+      "AUS      Australia         False           731\n",
+      "JAP          Japan         False           588\n",
+      "IN           India         False            18\n",
+      "RU          Russia          True           200\n",
+      "MOR        Morocco          True            70\n",
+      "EG           Egypt          True            45\n",
       "US     United States\n",
       "AUS        Australia\n",
       "JAP            Japan\n",
@@ -250,7 +258,7 @@
     "print(cars[0:4])\n",
     "\n",
     "# Print out fourth, fifth and sixth observation\n",
-    "print(cars[3:6])"
+    "print(cars[3:6])\n"
    ]
   },
   {
@@ -308,50 +316,142 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "country         Japan\n",
+      "drives_right    False\n",
+      "cars_per_cap      588\n",
+      "Name: JAP, dtype: object\n",
+      "\n",
+      "       country  drives_right  cars_per_cap\n",
+      "AUS  Australia         False           731\n",
+      "EG       Egypt          True            45\n",
+      "\n",
+      "     drives_right\n",
+      "MOR          True\n",
+      "\n",
+      "     country  drives_right\n",
+      "MOR  Morocco          True\n",
+      "RU    Russia          True\n",
+      "\n",
+      "US      True\n",
+      "AUS    False\n",
+      "JAP    False\n",
+      "IN     False\n",
+      "RU      True\n",
+      "MOR     True\n",
+      "EG      True\n",
+      "Name: drives_right, dtype: bool\n",
+      "\n",
+      "     drives_right\n",
+      "US           True\n",
+      "AUS         False\n",
+      "JAP         False\n",
+      "IN          False\n",
+      "RU           True\n",
+      "MOR          True\n",
+      "EG           True <class 'pandas.core.frame.DataFrame'> <class 'pandas.core.series.Series'>\n",
+      "\n",
+      "     cars_per_cap  drives_right\n",
+      "US            809          True\n",
+      "AUS           731         False\n",
+      "JAP           588         False\n",
+      "IN             18         False\n",
+      "RU            200          True\n",
+      "MOR            70          True\n",
+      "EG             45          True\n",
+      "\n"
+     ]
+    }
+   ],
    "source": [
     "# Import cars data\n",
     "import pandas as pd\n",
     "cars = pd.read_csv('pandas_examples/cars.csv', index_col = 0)\n",
     "\n",
     "# Print out observation for Japan\n",
-    "print(cars.loc[\"JAP\"])\n",
+    "print(cars.loc[\"JAP\"], end = '\\n\\n')\n",
     "\n",
     "# Print out observations for Australia and Egypt\n",
-    "print(cars.iloc[[1,6]])\n",
+    "print(cars.iloc[[1,6]], end = '\\n\\n')\n",
     "\n",
     "# Print out drives_right value of Morocco\n",
-    "print(cars.loc[[\"MOR\"], [\"drives_right\"]])\n",
+    "print(cars.loc[[\"MOR\"], [\"drives_right\"]], end = '\\n\\n')\n",
     "\n",
     "# Print sub-DataFrame\n",
-    "print(cars.loc[[\"MOR\", \"RU\"], [\"country\", \"drives_right\"]])\n",
+    "print(cars.loc[[\"MOR\", \"RU\"], [\"country\", \"drives_right\"]], end = '\\n\\n')\n",
     "\n",
     "# Print out drives_right column as Series\n",
-    "print(cars.loc[:, \"drives_right\"])\n",
+    "print(cars.loc[:, \"drives_right\"], end = '\\n\\n')\n",
     "\n",
     "# Print out drives_right column as DataFrame\n",
-    "print(cars.iloc[:,[1]])\n",
+    "print(cars.iloc[:,[1]], type(cars.iloc[:,[1]]), type(cars.iloc[:, 1]), end = '\\n\\n')\n",
     "\n",
     "# Print out cars_per_cap and drives_right as DataFrame\n",
-    "print(cars.loc[:, [\"cars_per_cap\", \"drives_right\"]])\n",
+    "print(cars.loc[:, [\"cars_per_cap\", \"drives_right\"]], end = '\\n\\n')\n",
     "\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### index號碼、index名稱 查詢"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- 如果想要用 index名稱 知道 index號碼，output為此method的結果\n",
+    "        - 找column\n",
+    "                df.columns.get_loc('index名稱')\n",
+    "        - 找row\n",
+    "                df.index.get_loc('index名稱')\n",
+    "- 如果想用 index號碼 知道 index名稱，output為一個np.array，以此為基準再由index存取\n",
+    "        - 找column\n",
+    "                df.columns.values[index號碼]\n",
+    "        - 找row\n",
+    "                df.index.values[index號碼]"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 49,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "           country  drives_right  cars_per_cap\n",
+      "US   United States          True           809\n",
+      "AUS      Australia         False           731\n",
+      "JAP          Japan         False           588\n",
+      "IN           India         False            18\n",
+      "RU          Russia          True           200\n",
+      "MOR        Morocco          True            70\n",
+      "EG           Egypt          True            45\n",
+      "1\n",
+      "1 <class 'method'>\n",
+      "country\n",
+      "['US' 'AUS' 'JAP' 'IN' 'RU' 'MOR' 'EG'] US <class 'numpy.ndarray'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(cars)\n",
+    "# get_loc\n",
+    "print(cars.columns.get_loc('drives_right'))\n",
+    "print(cars.index.get_loc('AUS'), type(cars.index.get_loc))\n",
+    "print(cars.columns.values[0])\n",
+    "print(cars.index.values, cars.index.values[0], type(cars.index.values))"
+   ]
   },
   {
    "cell_type": "code",
